--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,16 @@ html {
   background: linear-gradient(90deg, rgba(239,255,0,1) 0%, rgba(29,253,237,1) 50%, rgba(207,191,167,1) 100%);
 }
 
-.app {
+.header {
+  text-align: center;
+  color: rgb(0, 0, 0);
+}
+
+.game-container {
   display: flex;
   padding: 30px;
   justify-content: center;
-  margin: 80px;
+  margin: 30px;
 }
 
 .game {
